--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,20 @@
 body{
     background-color: #F6F6C9;
     text-align:center;
+    font-size: 1.3em;
+    font-family: arial, serif;
 }
 h1{
   color:#4FA095;
+  font-family: comic sans MS, sans-serif;
 }
 h2{
   color:#4FA095;
+  font-family: sans-serif;
+  line-height: 2;
+}
+h4{
+    font-size: 1em;
 }
 hr{
     background-color: #F6F6C9;
@@ -17,11 +25,13 @@ hr{
 }
 
 p{
-    margin-left: 25%;
-    margin-right: 25%;
     line-height: 200%;
 }
 
+
+.circular{
+    border-radius: 100%
+}
 p:hover{
-    font-size: 150%
+    font-size: 120%
 }
